--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -80,7 +80,7 @@
         id="linkGlobalRules">global rules</a>
       <span>/</span>
       <a
-        href="http://qjlf6jbb5ctcbsij.onion"
+        href="http://mewchqgmqfe6zhnu.onion/"
         id="linkTor">hidden service</a>
       <span>/</span>
       <a
